Updated panel information and links.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Andrew J. Madrid</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="index.html">Andrew J. Madrid</a></h1>
+					<p>Software Engineer<br />
+						NASA Flight Controller<br />
+						Virtual Reality Developer
+					</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -31,11 +33,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+
+						<li><a href="https://www.linkedin.com/in/andrew-madrid-3b0aa17b/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/ajmadrid3" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
